# constella

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
constella/: __init__.py  asr.py  cli.py  llm.py  orchestrator.py  primary.py  schemas.py  tts.py
constella/demo/: app.py  realtime.py
constella/eval/: __init__.py  rubric.py  run_eval.py
constella/eval/results/: 20260407_014553.json  20260407_014553.md  20260407_125822.json  20260407_125822.md  20260407_130908.json  20260407_130908.md  20260407_131540.json  20260407_131540.md  20260407_131940.json  20260407_131940.md
constella/eval/scenarios/: 01_english_baseline.json  02_spanish_baseline.json  03_code_switch_inhaler.json  04_high_glucose_followup.json  05_chest_pain_escalation.json  patient_maria.json
constella/realtime/: __init__.py  audio.py  tts.py
constella/specialists/: __init__.py  escalation.py  labs.py  language.py  medication.py
docs/: realtime_architecture.md
tests/: test_schemas.py
