[project]
name = "constella"
version = "0.1.0"
description = "A multi-agent voice constellation for bilingual healthcare follow-up calls, with first-class English-Spanish code-switching support."
authors = [
    { name = "Harshit Ghosh", email = "harshitghosh@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"

dependencies = [
    "pydantic>=2.7",
    "openai>=1.50",
    "gradio>=4.40",
    "gtts>=2.5",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "fastrtc[vad]>=0.0.20",
    "cartesia[websockets]>=2.0",
    "numpy>=1.26",
]

[project.scripts]
constella-chat = "constella.cli:main"
constella-eval = "constella.eval.run_eval:main"
constella-demo = "constella.demo.app:main"
constella-realtime = "constella.demo.realtime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["constella"]

[tool.pytest.ini_options]
testpaths = ["tests"]
